--- a/templates/layouts/header.phtml
+++ b/templates/layouts/header.phtml
@@ -14,22 +14,27 @@
 <body>
     <!-- main header -->
     <header>
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="home">La camiseteria</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="home">La Camisetería</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="showLogin">Login</a>
+                    </li>
+                    <?php if (isset($_SESSION['USER'])): ?>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="login">Login</a>
+                            <a class="nav-link" aria-current="page" href="modifyItems">Modificar ítems</a>
                         </li>
-                    </ul>
-                </div>
+                    <?php endif; ?>
+                </ul>
             </div>
-            </nav>
-    </header>
+        </div>
+    </nav>
+</header>
 
     <!-- inicio main container -->
     <main class="container mt-3">
