--- a/templates/layouts/header.phtml
+++ b/templates/layouts/header.phtml
@@ -2,18 +2,19 @@
 <html lang="en">
 
 <!-- head -->
+
 <head>
     <meta charset="UTF-8">
     <base href="<?php echo BASE_URL ?>">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>La camiseteria</title>
 </head>
-<body>
-    <!-- main header -->
-    <header>
+<!-- main header -->
+<header>
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="home">La Camisetería</a>
@@ -36,5 +37,6 @@
     </nav>
 </header>
 
-    <!-- inicio main container -->
-    <main class="container mt-3">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<!-- inicio main container -->
+<main class="container mt-3">
